environments/dev/app/namespaces/overlays/ircc-integration-poc/ircc-integration-poc.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ircc-integration-poc
  labels:
    ircc.gc.ca/environment: dev
    ircc.gc.ca/team: ircc-integration
spec: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-same-namespace
  namespace: ircc-integration-poc
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
  namespace: ircc-integration-poc
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-by-default
  namespace: ircc-integration-poc
spec:
  ingress: []
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-monitoring
  namespace: ircc-integration-poc
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
